# OnRobot-UR-ros2-TFC-gripper

./: CONTRIBUTING.md  LICENSE  README.md
onrobot_gripper_driver/: CMakeLists.txt  package.xml
onrobot_gripper_driver/config/: gripper_params.yaml
onrobot_gripper_driver/docs/github_templates/: bug_report.md  feature_request.md
onrobot_gripper_driver/examples/: INTEGRATION_GUIDE.md  minimal_test.py  moveit_gripper_integration.py  simple_integration_test.py  ur_gripper_integration.py
onrobot_gripper_driver/include/onrobot_gripper_driver/: gripper_driver_base.hpp  gripper_factory.hpp  modbus_client.hpp
onrobot_gripper_driver/include/onrobot_gripper_driver/grippers/: fg2_driver.hpp  fg3_driver.hpp  mg10_driver.hpp  rg_driver.hpp  vg_driver.hpp  vgp20_driver.hpp
onrobot_gripper_driver/launch/: onrobot_gripper.launch.py
onrobot_gripper_driver/msg/: GripperState.msg
onrobot_gripper_driver/scripts/: onrobot-tool-comm.service  start_socat.sh  stop_socat.sh
onrobot_gripper_driver/src/: gripper_driver_base.cpp  gripper_factory.cpp  main.cpp  modbus_client.cpp
onrobot_gripper_driver/src/grippers/: fg2_driver.cpp  fg3_driver.cpp  mg10_driver.cpp  rg_driver.cpp  vg_driver.cpp  vgp20_driver.cpp
onrobot_gripper_driver/srv/: Grip.srv  Release.srv  SetParameter.srv
